--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ mybatis.mapper-locations=classpath:edu/bupt/mapping/*.xml
 #mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/webdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&nullNamePatternMatchesAll=true
 spring.datasource.username=root
-spring.datasource.password=hubiao
+spring.datasource.password=123
 validationQuery=SELECT 1
 server.port=80
